--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1,12 +1,15 @@
 /*
  * Base structure
  */
+html {
+  position: relative;
+  min-height: 100%;
+}
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
 	padding-top: 50px;
 }
-
 
 /*
  * Global add-ons
@@ -108,11 +111,15 @@ body {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 60px; /* Set the fixed height of the footer here */
+	height: 40px; /* Set the fixed height of the footer here */
 	background-color: #f5f5f5;
 }
 
 .footer > .container {
 	padding-right: 15px;
 	padding-left: 15px;
+}
+
+.footer > .container .text-muted {
+  margin: 10px 0;
 }
